# opensim-cpp-tutorials

./: .gitignore  README.md
com-kinematics-analysis/main/: AnalysisTutorial.cpp  CMakeLists.txt
com-kinematics-analysis/main/plugin/include/: COMKinematicsPlugin.h
com-kinematics-analysis/main/plugin/libraries/: COMKinematicsPlugin.lib
com-kinematics-analysis/main/test_data/: subject01_Setup_AnalysisPluginTemplate.xml
com-kinematics-analysis/main/test_data/Results/: subject01_COMKinematicsPlugin_pos.sto
com-kinematics-analysis/plugin_source/: CMakeLists.txt  COMKinematicsPlugin.cpp  COMKinematicsPlugin.h  RegisterTypes_osimPlugin.cpp
dynamic-walker/: CMakeLists.txt  DWModelFunctions.cpp  DWModelFunctions.h  DynamicWalkerBuildModel.cpp
optimisation-arm/: ArmOptimiser.cpp  ArmOptimiser.h  CMakeLists.txt  OptimizationExample.cpp
